--- a/lesson01.html
+++ b/lesson01.html
@@ -1,3 +1,15 @@
-<h1>title</h1>
-<hr>
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <script src="l1.js"></script>
+</head>
+<body>
+    <input type="number" name="" id="year">
+    <input type="button" value="是否閏年" onclick="cal()">
+    <span id="result"></span>
+</body>
+</html>
