作業: 打磚塊&麻仔台v1

--- a/homework/game.html
+++ b/homework/game.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script src="main.js"></script>
+    <title>麻仔台</title>
+    <script src="game.js"></script>
 </head>
 
 <body>
@@ -51,11 +51,7 @@
         </tr>
 
     </table>
-    <button onclick="colorChange()"> click</button>
-    <script>
-    //    setInterval(colorChange,1000)
 
-    </script>
 </body>
 
 </html>
