--- a/homework/block.html
+++ b/homework/block.html
@@ -1,47 +1,19 @@
-<html>
- <head>
-  <script type="application/javascript">
-    function draw() {
-      var canvas = document.getElementById("canvas");
-      if (canvas.getContext) {
-        var ctx = canvas.getContext("2d");
-
-        ctx.fillStyle = "black";
-        ctx.fillRect (250, 550, 130, 20);
-        ctx.arc(250+50,500,8,0,Math.PI*2)
-        ctx.fill()
-        ctx.stroke()
- 
-        ctx.strokeRect(0,20,100,30)
-        ctx.strokeRect(100,20,100,30)
-        ctx.strokeRect(200,20,100,30)
-        ctx.strokeRect(300,20,100,30)
-        ctx.strokeRect(400,20,100,30)
-
-        ctx.strokeRect(0,50,100,30)
-        ctx.strokeRect(100,50,100,30)
-        ctx.strokeRect(200,50,100,30)
-        ctx.strokeRect(300,50,100,30)
-        ctx.strokeRect(400,50,100,30)
-
-        ctx.strokeRect(0,80,100,30)
-        ctx.strokeRect(100,80,100,30)
-        ctx.strokeRect(200,80,100,30)
-        ctx.strokeRect(300,80,100,30)
-        ctx.strokeRect(400,80,100,30)
-
-      }
-    }
-  </script>
-   <style type="text/css">
-    canvas { 
-        border: 10px solid black; 
-        margin-left:33%
+<head>
+  <meta charset="utf-8" />
+  <title>打磚塊</title>
+  <style>
+    canvas {
+      border: 5px solid black; 
+      display: block;
+      margin: 0 auto;
     }
   </style>
- </head>
+</head>
 
- <body onload="draw();">
-   <canvas id="canvas" width="500" height="600" ></canvas>
+<body>
+   <canvas id="myCanvas" width="620" height="480" ></canvas>
+   <script src="block.js">
+
+    </script>
  </body>
 </html>
