--- a/prototype.html
+++ b/prototype.html
@@ -1,6 +1,32 @@
 <script>
 
+// 設定原型屬性，物件也會有
 
+let bike = function() {
+    console.log('new bike')
+    this.a = 123;
+    this.b = 234;
+}
+
+
+let b1 = new bike() ;
+bike.prototype.x = 11111
+console.log(b1.x)
+
+bike.prototype.b = 123123;
+console.log(b1.b)          //shadow: 後來才給的值，會覆蓋原型的值，新值為主
+
+
+let b2 = new bike()
+b2.b= 55;
+b2.c= 87;
+console.log(b2.a)
+
+console.log(b2.b)
+
+console.log(b2.c)
+
+console.log(b2.x)
 
 
 </script>
